# MIlestone-2

./: CMakeLists.txt  README.md  details.txt  log.txt  main.cpp
cacheManager/: CacheManager.h  FileCacheManager.cpp
client/: ClientHandler.h  MyClientHandler.cpp  MyTestClientHandler.cpp  String.h
experiment/: 10*10  13*13  16*16  19*19  22*22  25*25  28*28  31*31  34*34  35*35  AStar  BFS  BestFS  DFS
searchable/: Matrix.cpp  Searchable.h  State.h
searcher/: BestFS.cpp  Searcher.h
server/: MyParallelServer.cpp  MySerialServer.cpp  Server.h
solver/: Solver.cpp  Solver.h  SolverAdapter.cpp  StringReverser.cpp
